--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,42 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  @apply text-gray-900 bg-gray-100 font-sans transition-colors ease-in-out duration-300;
+}
+
+.container {
+  @apply max-w-md mx-auto p-6 bg-white shadow-md rounded-lg;
+}
+
+.title {
+  @apply text-3xl font-semibold text-black text-center mb-8;
+}
+
+label span {
+  @apply text-gray-800 font-medium;
+}
+
+input {
+  @apply mt-2 p-2 w-full border border-gray-400 rounded-md focus:outline-none focus:ring focus:ring-blue-300 text-black bg-white;
+}
+
+button {
+  @apply w-full bg-blue-500 text-white py-2 rounded-md hover:bg-blue-600 transition duration-300;
+}
+
+.result {
+  @apply mt-8 w-full max-w-md p-4 bg-white rounded-lg shadow-md text-gray-900;
+}
+
+.result p {
+  @apply text-lg;
+}
+
+.footer {
+  @apply mt-10 py-4 w-full bg-gray-200 text-center text-gray-700 text-sm;
+}
+
+.logo {
+  @apply mb-4; /* Przykładowy margines na dole */
 }
